--- a/Clase 8 - Flexbox Practica/index.html
+++ b/Clase 8 - Flexbox Practica/index.html
@@ -1,21 +1,27 @@
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="contenedor">
         <div class="contenedor-login">
             <form>
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email">
-                <label for="password">Password</label>
+                <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password">
-                <button>Enviar</button>
+                <button class="boton">Ingresar</button>
             </form>
             <img class="img-estatua" src="./estatua.png" alt="Estatua de David cortada a la mitad">
         </div>
     </div>
 </body>
+
 </html>
