--- a/Clase 10 y 11 - Pedimon/index.html
+++ b/Clase 10 y 11 - Pedimon/index.html
@@ -34,6 +34,26 @@
         <img class="img-pikachu-hero" src="./img/pikachu-hero.png" alt="Imagen de Pikachu transparente">
     </section>
 
+    <section class="section-info">
+        <h2 class="title-section-info">No te quedes sin tu pedido</h2>
+        <p class="paragraph-section-info">Dale perry, no te podes quedar sin tu Pedimon! Mira lo facil que es ...</p>
+        <div class="container-section-info">
+            <div class="container-element-info">
+                <img src="./img/info-icon-1.png" alt="Simbolo del elemento agua en Pokemon">
+                <p>Elegis el Pedi que vos queres de la lista de aca abajo (si hay)</p>
+            </div>
+            <div class="container-element-info">
+                <img src="./img/info-icon-2.png" alt="Simbolo del elemento trueno en Pokemon">
+                <p>Lo agregas al carrito de la camada tiene que haber alguno en algun lado</p>
+            </div>
+            <div class="container-element-info">
+                <img src="./img/info-icon-3.png" alt="Simbolo del elemento fuego en Pokemon">
+                <p>Le das al boton de comprar y listo! Ya tenes tus Pedis en tu casa muy pronto</p>
+            </div>
+        </div>
+        
+    </section>
+
 </body>
 
 </html>
